# mobile_manipulator_ros2

./: frames_2026-05-01_23.38.04.gv
install/: local_setup.sh  setup.sh
log/: latest_build
src/assem1_controller/: CMakeLists.txt
src/assem1_controller/assem1_controller/: slider_controller.py
src/assem1_controller/config/: assem1_controllers.yaml
src/assem1_controller/launch/: controller.launch.py  slider_controller.launch.py
src/assem1_description/: CMakeLists.txt  package.xml
src/assem1_description/launch/: display.launch.py  gazebo.launch.py
src/assem1_description/meshes/: Caster_1.STL  Empty_Link4.STL
src/assem1_description/rviz/: display.rviz
src/assem1_description/urdf/: assem1.urdf.xacro  gazebo.xacro  mobile_manipulator.xacro  ready_for_assistant.urdf  ros2_control.xacro  sensors.xacro
src/assem1_description/worlds/: empty.world
src/assem1_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/assem1_moveit/config/: assem1.srdf  assem1_robot.ros2_control.xacro  assem1_robot.srdf  assem1_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_python_api.yaml  ros2_controllers.yaml
src/assem1_test/: CMakeLists.txt  package.xml
src/assem1_test/urdf/: Assem1.urdf  (+1 more)
src/assem1_vision/: package.xml  setup.cfg  setup.py
src/assem_bringup/: CMakeLists.txt  package.xml
src/assem_bringup/launch/: goal.launch.py  pick_and_place.launch.py
src/assem_controller/: CMakeLists.txt  assem_controller.xml  package.xml
src/assem_controller/assem_controller/: slider_controller.py
src/assem_controller/include/assem_controller/: assem_interface.hpp
src/assem_controller/launch/: controller.launch.py  slider_controller.launch.py
src/assem_controller/src/: assem_interface.cpp  slider_control.cpp
src/assem_cpp_examples/: CMakeLists.txt  package.xml
src/assem_description/: CMakeLists.txt  package.xml
src/assem_description/launch/: display.launch.py  gazebo.launch.py
src/assem_description/meshes/: Armlink1.STL  Empty_Link.STL  Empty_Link2.STL  Empty_Link3.STL  armlink2.STL
src/assem_description/meshes/collision/: Armlink1.mtl
src/assem_description/meshes/visual/: Armlink1.dae  armlink2.dae
src/assem_description/rviz/: display.rviz
src/assem_description/urdf/: assem.urdf.xacro  gazebo.xacro  mobile_manipulator.xacro  ready_for_assistant.urdf  ros2_control.xacro  sensors.xacro
src/assem_description/worlds/: empty.world
src/assem_firmware/: CMakeLists.txt  package.xml
src/assem_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/assem_msgs/: CMakeLists.txt  package.xml
src/assem_py_examples/: package.xml  setup.cfg  setup.py
src/assem_utils/: CMakeLists.txt  package.xml
src/assem_vision/: package.xml  setup.cfg  setup.py
(+76 files in other folders)
