<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assem_bringup</name>
  <version>0.0.0</version>
  <description>Assem Bringup package</description>
  <maintainer email="mhmdkamel870@gmail.com">Mohamed</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>assem_controller</exec_depend>
  <exec_depend>assem_description</exec_depend>
  <exec_depend>assem_moveit</exec_depend>
  <exec_depend>assem_vision</exec_depend>
  <!--<exec_depend>pymoveit2</exec_depend>-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
